update swagger spec
